nvidia-graphics-drivers (470.86-1) UNRELEASED; urgency=medium

  * New upstream production branch release 470.86 (2021-11-10).
    - Added support for the following GPUs: RTX A2000 12GB, RTX A4500,
      T400 4GB, T1000 8GB.

  [ Andreas Beckmann ]
  * Update nv-readme.ids.

 -- Andreas Beckmann <anbe@debian.org>  Tue, 16 Nov 2021 11:40:20 +0100

nvidia-graphics-drivers (470.82.01-1) UNRELEASED; urgency=medium

  * New upstream Tesla release 470.82.01 (2021-11-02).
    - Fixed a regression which prevented DisplayPort and HDMI 2.1 variable
      refresh rate (VRR) G-SYNC Compatible monitors from functioning correctly
      in variable refresh rate mode, resulting in issues such as flickering.

 -- Andreas Beckmann <anbe@debian.org>  Mon, 08 Nov 2021 16:52:53 +0100

nvidia-graphics-drivers (470.82.00-1) unstable; urgency=medium

  * New upstream production branch release 470.82.00 (2021-10-26).
    - Added support for the following GPUs: Matrox D-Series D2450,
      Matrox D-Series D2480, NVIDIA A2.
    - Fixed a bug that can cause a kernel crash in SLI Mosaic configurations.
    - Added support for the EGL_NV_robustness_video_memory_purge extension

  [ Andreas Beckmann ]
  * Refresh patches.
  * bug-script: Show the nvidia and glx alternatives.
  * nvidia-alternative: libnvidia-cfg.so.1 on its own is not
    sufficient to activate a nvidia alternative.  (Closes: #996595)
  * Fix bashisms in upstream scripts.
  * Drop the unusable leftover non-GLVND libegl1-nvidia package.
    (Closes: #996763)
  * nvidia-alternative: Drop unused non-GLVND slave links.
  * Restrict watch file to releases from the 470.xx production branch.
  * Update lintian overrides.

 -- Andreas Beckmann <anbe@debian.org>  Fri, 05 Nov 2021 09:18:55 +0100

nvidia-graphics-drivers (470.74-1) unstable; urgency=medium

  * New upstream production branch release 470.74 (2021-09-20).
    - Fixed a bug that could cause GPU applications to exit when resuming
      from suspend.