@@ -78,6 +78,7 @@ if [ "$1" = "triggered" ]; then
 		$(add_slave /etc/nvidia/nvidia-drm-outputclass.conf nvidia-drm-outputclass.conf /etc/#PRIVATE#/nvidia-drm-outputclass.conf)
 		$(add_slave /etc/nvidia/nvidia-blacklists-nouveau.conf nvidia-blacklists-nouveau.conf /etc/#PRIVATE#/nvidia-blacklists-nouveau.conf)
 		$(add_slave /etc/nvidia/nvidia-modprobe.conf nvidia-modprobe.conf /etc/#PRIVATE#/nvidia-modprobe.conf)
+		$(add_slave /etc/modprobe.d/nvidia-options.conf nvidia-options.conf /etc/#PRIVATE#/nvidia-options.conf)
 		$(add_slave /etc/nvidia/nvidia-load.conf nvidia-load.conf /etc/#PRIVATE#/nvidia-load.conf)
 "
 	libnvidia_ml_so_slave=
