@@ -1,0 +1,4 @@
+#options #MODULE# NVreg_DeviceFileUID=0 NVreg_DeviceFileGID=44 NVreg_DeviceFileMode=0660
+# To enable FastWrites and Sidebus addressing, uncomment these lines
+# options #MODULE# NVreg_EnableAGPSBA=1
+# options #MODULE# NVreg_EnableAGPFW=1
